<resources>
    <string name="app_name">Memory-Test-Game</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="your_score">Your Score</string>
     <string name="memory_test_game">Memory Test Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="time_0_s">Time: 0 s</string>
    <string name="your_nickname">Your Nickname:</string>
    <string name="score">Score</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="current_score">Current score</string>
    <string name="current_top_score">Current top score</string>

</resources>