<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5AC2CF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="@string/memory_test_game"
        android:textAllCaps="false"
        android:textColor="#B6E1F4"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/start"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/buttonScoreboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/scoreboard"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/buttonRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/rules"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/exit"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>