<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5AC2CF">


    <TextView
        android:id="@+id/titleTopScore"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="Top score"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/topScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/topScore"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="#3F569E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/titleScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleScore"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/points"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textNickname"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/your_nickname"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/entertYourNick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/entertYourNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>