<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5AC2CF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="100dp"

        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/settings"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
            android:id="@+id/amountOfNumber"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="The amount of numbers: "
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/spinnerNumber"
            android:layout_below="@id/titleSettings"/>

        <Spinner
            android:id="@+id/spinnerNumber"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/titleSettings"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/textGameTime"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="Display time: "
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/spinnerTime"
            android:layout_below="@id/amountOfNumber"/>


        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_below= "@id/spinnerNumber"
            android:layout_alignParentRight="true" />

        <CheckBox
            android:id="@+id/randomNumber"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="75dp"
            android:gravity="center"
            android:cursorVisible="false"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-medium"
            android:text="Random numbers"
            android:textColor="#055173"
            android:layout_below="@id/textGameTime"
           />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_margin="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/randomNumber"
            android:layout_alignParentRight="true"
          />

        <Button
            android:id="@+id/backFromTheSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/randomNumber"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:layout_marginBottom="25dp"
            android:layout_toStartOf="@+id/buttonStart"
            android:layout_toLeftOf="@+id/buttonStart"
            android:text="@string/back" />


</RelativeLayout>